--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -15,7 +15,7 @@
     <h1>NausBlog</h1>
     <p>Blog updates on the life of EverythingNaus.</p>
   </a>
-  <a href="nausdesign.com" targer="_blank" class="grid-item grid-item-big grid-item-nausdesign">
+  <a href="nausdesign.com" target="_blank" class="grid-item grid-item-big grid-item-nausdesign">
     <img src="assets/img/ndlogo.png" alt="nausdesign logo">
     <h1>NausDesign</h1>
     <p>Graphic Design and Web Development.</p>
