--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -4,6 +4,14 @@
   <div class="images-wrapper">
   <h1>Everything Naus</h1>
   <h4>Hi, My name is Chris Nauslar (The Naus) and this site is deticated to my many intrest and hobbies!  Join me as I blog about the Web Development, FPV, all things Tech relate, and never growing up!</h4>
+  <div class="stats">
+    <ul>
+      <li>3<span>Blog Post</span></li>
+      <li>5<span>Pictures</span></li>
+      <li>1<span>Videos</span></li>
+      <li>98<span>Followers</span></li>
+    </ul>
+  </div>
   </div>
     <div class="side-image-content">
       <div class="grid-items">
@@ -17,7 +25,7 @@
     <h1>NausDesign</h1>
     <p>Graphic Design and Web Development.</p>
   </a>
-  <a href="javascript:void(0)" class="grid-item grid-item-big grid-item-nausfpv">
+  <a href="fpv/index.html" class="grid-item grid-item-big grid-item-nausfpv">
     <img src="assets/img/ndlogo.png" alt="nausdesign logo">
     <h1>NausFPV</h1>
     <p>FPV, Drones, and More!</p>
